--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "bin": {
-    "phaser": "bin/phaser"
+    "phaser-generator": "bin/phaser-generator"
   },
   "scripts": {},
   "devDependencies": {},
